# ComfyUI_RealtimeNodes

./: .gitignore  LICENSE  README.MD  __init__.py  control_nodes.py  dimensions.py  image_enhance.py  misc_nodes.py  notes.txt  particle_nodes.py  pyproject.toml  quick_shape_mask.py  requirements.txt  server.py  stream_attention.py  stream_cfg.py  stream_conditioning.py  stream_diffusion_nodes.py  stream_sampler.py  tiny_vae.py
.ipynb_checkpoints/: __init__-checkpoint.py  particle_nodes-checkpoint.py
base/: __init__.py  control_base.py  detector_base.py  stream_base.py
controls/: audio_controls.py  audio_stream_adapter.py  detector_controls.py  mask_controls.py  motion_controls.py  motion_controls.py.txt  sequence_controls.py  state_management_controls.py  utility_controls.py  value_controls.py
detectors/: detector_nodes.py  detectors.py
examples/: 313WARP384_highes.json  313WARP384_highes_upscale.json  313WARP512_3step.json  FPS_Monitor_API.json  hand_tracking_mask_resizer.json  mask_string.json  motioncontrol_example_API.json  old-exper.-steam-samp-depth t2i featurebank life and death.json  pixelate_example_API.json  pixelate_example_WORKFLOW.json  prompt_updating_WORKFLOW.json  shape_resize_example_API.json  shape_resize_example_WORKFLOW.json
examples/control_nodes/: BROCCOLI_GAME.json  FPS_Monitor_WORKFLOW.json  hand_tracking_mask_resizer.json  mask_string.json  motioncontrol.json  (+7 more)
patterns/: movement_patterns.py
processors/: audio_processor.py
src/: __init__.py  types.py
tests/: README.md  __init__.py  requirements.txt  test_profiling.py
(+186 files in other folders)
